[tool.poetry]
name = "test_chatbot"
version = "0.1.0"
description = "Test a new framework rasa"
authors = ["Oscar Riojas <oscar@whaleandjaguar.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.5,<3.10"
rasa = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
